@@ -7,6 +7,7 @@ documents those changes that are of interest to users and administrators.
  -- Fix job array preemption during backfill scheduling.
  -- Fix scontrol -o show assoc output.
  -- Add support for sacct --whole-hetjob=[yes|no] option.
+ -- Make salloc handle node requests the same as sbatch.
 
 * Changes in Slurm 18.08.0pre2
 ==============================
